hotfix | Fix layout issue in collect section and improve button hover effects

--- a/src/app/collect-section/collect-section.component.scss
+++ b/src/app/collect-section/collect-section.component.scss
@@ -2,6 +2,8 @@
 
 :host {
     @include section();
+
+    grid-template-rows: max-content max-content 1fr;
 }
 
 form {
